Mobile css optimization

--- a/src/components/item-card/item-card.style.scss
+++ b/src/components/item-card/item-card.style.scss
@@ -19,6 +19,14 @@
     position: absolute;
     top: 255px;
     display: none;
+
+    @media screen and (max-width: 800px) {
+      display: block;
+      opacity: 0.9;
+      min-width: unset;
+      padding: 0 10px;
+      font-size: small;
+    }
   }
 
   &:hover {
@@ -29,6 +37,20 @@
     button {
       opacity: 0.85;
       display: flex;
+    }
+  }
+
+  @media screen and (max-width: 800px) {
+    width: 40vw;
+
+    &:hover {
+      img {
+        opacity: unset;
+      }
+
+      button {
+        opacity: unset;
+      }
     }
   }
 
@@ -48,4 +70,6 @@
       width: 10%;
     }
   }
+
+
 }
